# Stellar-Player

./: CMakeLists.txt  README.md  install.sh
include/: MainWindow.h  MpvWidget.h  PlayerController.h  PlaylistModel.h  SettingsManager.h  SubtitleSettingsDialog.h  ThemeManager.h
resources/: MainWindow.ui  SubtitleSettingsDialog.ui  resources.qrc
src/: MainWindow.cpp  MpvWidget.cpp  PlayerController.cpp  PlaylistModel.cpp  SettingsManager.cpp  SubtitleSettingsDialog.cpp  ThemeManager.cpp  main.cpp
styles/: dark.qss  light.qss
translations/: StellarPlayer_es.qm
